--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "WebSpike",
-  "version": "1.0.0",
-  "description": "Just Playing Around With Node",
-  "main": "app.js",
+  "name": "webspike",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jquintus/WebSpike"
-  },
-  "keywords": [
-    "node",
-    "web"
-  ],
-  "author": "jquintus",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jquintus/WebSpike/issues"
-  },
-  "homepage": "https://github.com/jquintus/WebSpike",
   "dependencies": {
-    "express": "^4.13.4",
-    "jade": "^1.11.0",
-    "lodash": "^4.6.1"
+    "express": "^4.13.3",
+    "serve-favicon": "^2.3.0",
+    "morgan": "^1.6.1",
+    "cookie-parser": "^1.3.3",
+    "body-parser": "^1.13.3",
+    "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.0"
   }
 }
